Test Accordion Pushdown

--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -93,7 +93,7 @@ body{
     position: absolute;
     left: 0%;
     right: 0%;
-    top: 12.89%;
+    top: 80px;
     bottom: 0%;
 
     background: url('/src/assets/iStock-1162097121\ 2.png');
