Integrate Google Model-Viewer

--- a/src/components/GeoWebContent/styles.css
+++ b/src/components/GeoWebContent/styles.css
@@ -1,7 +1,34 @@
+.switch-div {
+    position: relative;
+    margin-top: 2%;
+}
+
+.switch-left {
+    position: absolute;
+    top: 9.5%;
+    left: 27%;
+    color: white;
+}
+
+.switch-right {
+    position: absolute;
+    float: right;
+    right: 34%;
+    top: 9.5%;
+    color: white;
+}
+
 .gwIframe {
     position: relative;
-    top: 20px;
+    margin-top: 4%;
     width: 100%;
     height: calc(100vh - 200px);
     overflow:hidden;
+}
+
+model-viewer {
+    position: relative;
+    margin-top: 4%;
+    width: 100%;
+    height: calc(100vh - 200px);
 }
