Switch w/o re-render

--- a/src/components/GeoWebContent/styles.css
+++ b/src/components/GeoWebContent/styles.css
@@ -5,22 +5,22 @@
 
 .switch-left {
     position: absolute;
-    top: 9.5%;
-    left: 27%;
+    top: 12%;
+    left: 14%;
     color: white;
 }
 
 .switch-right {
     position: absolute;
     float: right;
-    right: 34%;
-    top: 9.5%;
+    right: 20%;
+    top: 12%;
     color: white;
 }
 
 .gwIframe {
     position: relative;
-    margin-top: 4%;
+    margin-top: 2%;
     width: 100%;
     height: calc(100vh - 200px);
     overflow:hidden;
@@ -28,7 +28,8 @@
 
 model-viewer {
     position: relative;
-    margin-top: 4%;
+    margin-top: 2%;
     width: 100%;
     height: calc(100vh - 200px);
+    background-color: lightgrey;
 }
