--- a/src/components/GeoWebContent/styles.css
+++ b/src/components/GeoWebContent/styles.css
@@ -33,3 +33,72 @@ model-viewer {
     height: calc(100vh - 200px);
     background-color: lightgrey;
 }
+
+#ar-prompt-img {
+    content:url('/src/assets/hand.png');
+}
+
+#ar-button {
+    background-image: url('/src/assets/noun_Augmented\ Reality_3557167\ 1.png');
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: center;
+    background-color: rgba(255, 255, 255, 0);
+    position: absolute;
+    right: 2%;
+    top: 0%;
+    height: 64px;
+    width: 64px;
+    border-radius: 18px;
+    border: 1px solid #00000000;
+  }
+
+  #ar-button:active {
+    background-color: #E8EAED;
+  }
+
+  #ar-button:focus {
+    outline: none;
+  }
+
+  #ar-button:focus-visible {
+    outline: 1px solid #4285f4;
+  }
+
+  @keyframes circle {
+    from { transform: translateX(-50%) rotate(0deg) translateX(50px) rotate(0deg); }
+    to   { transform: translateX(-50%) rotate(360deg) translateX(50px) rotate(-360deg); }
+  }
+
+  @keyframes elongate {
+    from { transform: translateX(100px); }
+    to   { transform: translateX(-100px); }
+  }
+
+  model-viewer > #ar-prompt {
+    position: absolute;
+    left: 50%;
+    bottom: 175px;
+    animation: elongate 2s infinite ease-in-out alternate;
+    display: none;
+  }
+
+  model-viewer[ar-status="session-started"] > #ar-prompt {
+    display: block;
+  }
+
+  model-viewer > #ar-prompt > img {
+    animation: circle 4s linear infinite;
+  }
+
+  model-viewer > #ar-failure {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 175px;
+    display: none;
+  }
+
+  model-viewer[ar-tracking="not-tracking"] > #ar-failure {
+    display: block;
+  }
