--- a/src/components/GeoWebContent/styles.css
+++ b/src/components/GeoWebContent/styles.css
@@ -102,3 +102,32 @@ model-viewer {
   model-viewer[ar-tracking="not-tracking"] > #ar-failure {
     display: block;
   }
+
+  .clk-left{
+    background-image: url('/src/assets/noun_right_1920905\ 2.png');
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: center;
+    background-color: rgba(255, 255, 255, 0);
+    position: absolute;
+    left: 2%;
+    bottom: 40%;
+    height: 64px;
+    width: 64px;
+    border: none;
+    z-index: 1;
+  }
+
+  .clk-right {
+    background-image: url('/src/assets/noun_right_1920905\ 1.png');
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: center;
+    background-color: rgba(255, 255, 255, 0);
+    position: absolute;
+    right: 2%;
+    bottom: 40%;
+    height: 64px;
+    width: 64px;
+    border: none;
+  }
