--- a/src/components/common/ContentFiller/styles.css
+++ b/src/components/common/ContentFiller/styles.css
@@ -23,7 +23,6 @@
     width: 353px;
     height: 340px;
     left: calc(50vw - 176px);
-    top: calc(50vh - 150px - 140px + 239px);
 
     font-family: 'Abel';
     font-style: normal;
@@ -32,9 +31,15 @@
     line-height: 32px;
     /* or 133% */
 
-    display: flex;
+    /*display: flex;*/
     align-items: center;
     text-align: center;
 
+    color: #FFFFFF;
+    top: calc(50vh - 150px - 140px + 239px);
+}
+
+.txt2 {
+    
     color: #FFFFFF;
 }
