--- a/src/components/common/TitleBar/styles.css
+++ b/src/components/common/TitleBar/styles.css
@@ -23,7 +23,7 @@ body{
     height: 61px;
     width: 61px;
 
-    background: url('/src/assets/Small\ Geo\ Web\ Icon\ 1.png');
+    background: url('/src/assets/Pixelated_Geo_Web_Logo_Transparent.png');
 }
 
 .title-bar{
