--- a/src/components/common/TitleBar/styles.css
+++ b/src/components/common/TitleBar/styles.css
@@ -1,96 +1,97 @@
-body{
-    background: #202333;
+body {
+  background: #202333;
 }
 
 @font-face {
-    font-family: 'Abel';
-    src: local('Abel'), url('/src/assets/fonts/Abel/Abel-Regular.ttf') format('opentype');
+  font-family: "Abel";
+  src: local("Abel"),
+    url("/src/assets/fonts/Abel/Abel-Regular.ttf") format("opentype");
 }
 
 @font-face {
-    font-family: 'OpenSans';
-    src: local('OpenSans'), url('/src/assets/fonts/OpenSans/OpenSans-Regular.ttf') format('opentype');
+  font-family: "OpenSans";
+  src: local("OpenSans"),
+    url("/src/assets/fonts/OpenSans/OpenSans-Regular.ttf") format("opentype");
 }
 
 .logo {
-    /* Small Geo Web Icon 1 */
+  /* Small Geo Web Icon 1 */
 
-    position: absolute;
-    left: 3.12%;
-    right: 82.25%;
-    top: 12.5%;
-    bottom: 11.25%;
-    height: 61px;
-    width: 61px;
+  position: absolute;
+  left: 3.12%;
+  right: 82.25%;
+  top: 12.5%;
+  bottom: 11.25%;
+  height: 61px;
+  width: 61px;
 
-    background: url('/src/assets/Pixelated_Geo_Web_Logo_Transparent.png');
+  background: url("/src/assets/Pixelated_Geo_Web_Logo_Transparent.png");
 }
 
-.title-bar{
-    position: absolute;
-    top: 0%;
-    width: 100%;
-    height: 80px;
-    background: #202333;
-    mix-blend-mode: normal;
-    box-shadow: 0px 1px 1px #7C8AC9;
+.title-bar {
+  position: absolute;
+  top: 0%;
+  width: 100%;
+  height: 80px;
+  background: #202333;
+  mix-blend-mode: normal;
+  box-shadow: 0px 1px 1px #7c8ac9;
 }
 
-.title-txt{
-    /* Geo Web */
+.title-txt {
+  /* Geo Web */
 
-    position: absolute;
-    left: 31.89%;
-    right: 31.41%;
-    top: 16.25%;
-    bottom: 37.5%;
+  position: absolute;
+  left: 31.89%;
+  right: 31.41%;
+  top: 16.25%;
+  bottom: 37.5%;
 
-    font-family: 'Abel';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 40px;
-    line-height: 40px;
-    /* or 100% */
+  font-family: "Abel";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 40px;
+  /* or 100% */
 
-    text-align: center;
-    white-space: nowrap;
+  text-align: center;
+  white-space: nowrap;
 
-    /* green */
-    color: #2FC1C1;
+  /* green */
+  color: #2fc1c1;
 }
 
-.title-caption{
-    /* Browse Earth */
+.title-caption {
+  /* Browse Earth */
 
-    position: absolute;
-    left: 31.65%;
-    right: 31.41%;
-    top: 51.25%;
-    bottom: 16.25%;
+  position: absolute;
+  left: 31.65%;
+  right: 31.41%;
+  top: 51.25%;
+  bottom: 16.25%;
 
-    font-family: 'OpenSans';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 13px;
-    line-height: 45px;
-    /* or 346% */
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 45px;
+  /* or 346% */
 
-    align-items: center;
-    text-align: center;
+  align-items: center;
+  text-align: center;
 
-    /* white */
+  /* white */
 
-    color: #FFFFFF;
+  color: #ffffff;
 }
 
 .gps-location {
-    
-    position: absolute;
-    right: 3.12%;
-    top: 12.5%;
-    bottom: 11.25%;
-    height: 61px;
-    width: 61px;
+  position: absolute;
+  right: 3.12%;
+  top: 12.5%;
+  bottom: 11.25%;
+  height: 61px;
+  width: 61px;
 
-    background: url('/src/assets/gps.png');
+  background: url("/src/assets/gps.png");
 }
