--- a/src/components/common/Menu/styles.module.css
+++ b/src/components/common/Menu/styles.module.css
@@ -1,12 +1,3 @@
-.menu {
-  position: absolute;
-  right: 3.12%;
-  top: 12.5%;
-  bottom: 11.25%;
-  height: 61px;
-  width: 61px;
-}
-
 .switch {
   display: flex;
   flex-direction: row;
@@ -29,6 +20,8 @@
   width: 70px;
 }
 
-.buttonContainer {
-  margin-left: auto;
+.social {
+  display: flex;
+  justify-content: space-around;
+  padding: 1.5rem;
 }
