--- a/src/container/GeoWebInterface/components/GeoWebContent/styles.module.css
+++ b/src/container/GeoWebInterface/components/GeoWebContent/styles.module.css
@@ -1,19 +1,11 @@
 .switch-div {
-  position: relative;
-  margin-top: 2%;
-}
-
-.switch-left {
-  position: absolute;
-  top: 12%;
-  left: 14%;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
   color: white;
-}
-
-.switch-right {
-  position: absolute;
-  float: right;
-  right: 20%;
-  top: 12%;
-  color: white;
+  background: rgba(32, 35, 51, 0.7);
+  padding: 16px 0 16px 0;
 }
