--- a/src/components/common/TitleBar/styles.module.css
+++ b/src/components/common/TitleBar/styles.module.css
@@ -1,82 +1,7 @@
-@font-face {
-  font-family: "Abel";
-  src: local("Abel"),
-    url("/assets/fonts/Abel/Abel-Regular.ttf") format("opentype");
-}
-
-@font-face {
-  font-family: "OpenSans";
-  src: local("OpenSans"),
-    url("/assets/fonts/OpenSans/OpenSans-Regular.ttf") format("opentype");
-}
-
-.logo {
-  position: absolute;
-  left: 3.12%;
-  right: 82.25%;
-  top: 12.5%;
-  bottom: 11.25%;
-  height: 61px;
-  width: 61px;
-
-  background: url("/assets/geo-web-logo.png");
-}
-
 .title-bar {
-  position: absolute;
-  top: 0%;
-  width: 100%;
-  height: 80px;
+  display: flex;
+  justify-content: space-between;
   background: #202333;
-  mix-blend-mode: normal;
-  box-shadow: 0px 1px 1px #7c8ac9;
-}
-
-.title-txt {
-  /* Geo Web */
-
-  position: absolute;
-  left: 31.89%;
-  right: 31.41%;
-  top: 16.25%;
-  bottom: 37.5%;
-
-  font-family: "Abel";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 40px;
-  line-height: 40px;
-  /* or 100% */
-
-  text-align: center;
-  white-space: nowrap;
-
-  /* green */
-  color: #2fc1c1;
-}
-
-.title-caption {
-  /* Browse Earth */
-
-  position: absolute;
-  left: 31.65%;
-  right: 31.41%;
-  top: 51.25%;
-  bottom: 16.25%;
-
-  font-family: "OpenSans";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 13px;
-  line-height: 45px;
-  /* or 346% */
-
-  align-items: center;
-  text-align: center;
-
-  /* white */
-
-  color: #ffffff;
 }
 
 .gps-location {
@@ -86,6 +11,5 @@
   bottom: 11.25%;
   height: 61px;
   width: 61px;
-
   background: url("/assets/gps.png");
 }
