--- a/src/container/GeoWebInterface/components/GeoWebView/styles.module.css
+++ b/src/container/GeoWebInterface/components/GeoWebView/styles.module.css
@@ -1,7 +1,50 @@
-.gwIframe {
-  position: relative;
-  margin-top: 2%;
+.wrapper {
   width: 100%;
-  height: calc(100vh - 260px);
+  height: calc(100vh - 73px);
   overflow: hidden;
+}
+
+.full-screen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  width: 100vw;
+  height: 100vh;
+  border: 0;
+  overflow: auto;
+}
+
+.gwIframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+  overflow: auto;
+}
+
+.full-screen-btn {
+  position: fixed;
+  z-index: 1001;
+  right: 16px;
+  display: flex;
+  align-items: center;
+  background: rgba(32, 35, 51, 0.6);
+  padding: 6px;
+  border: 0;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.full-screen-btn.on {
+  top: 32px;
+}
+
+.full-screen-btn.off {
+  top: 100px;
+}
+
+@media (min-width: 600px) {
+  .full-screen-btn {
+    right: 32px;
+  }
 }
