--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@ model-viewer {
   position: relative;
   width: 100%;
   height: calc(100vh - 170px);
+  height: calc(100svh - 170px);
   background-color: lightgrey;
 }
 
