--- a/src/container/GeoWebInterface/components/GeoWebCanvas/styles.module.css
+++ b/src/container/GeoWebInterface/components/GeoWebCanvas/styles.module.css
@@ -70,3 +70,9 @@
   transform: translate3d(-50%, -50%, 0);
   z-index: 100;
 }
+
+@media (prefers-color-scheme: dark) {
+  .gallery {
+    background: #14161a;
+  }
+}
