--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,17 @@
     url("/assets/fonts/Abel/Abel-Regular.ttf") format("opentype");
 }
 
+@font-face {
+  font-family: "Inter";
+  src: local("Inter"),
+    url("/assets/fonts/Inter/Inter-Regular.ttf") format("opentype");
+}
+
 body {
   margin: 0;
-  font-family: "Abel", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Abel", -apple-system, BlinkMacSystemFont, "Inter", "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #202333;
