--- a/src/App.scss
+++ b/src/App.scss
@@ -24,7 +24,7 @@ $theme-colors: (
 
 $font-family-base: "Abel";
 
-@import "~bootstrap/scss/bootstrap";
+// @import "~bootstrap/scss/bootstrap";
 
 body {
   background: #202333;
