--- a/src/container/GeoWebInterface/components/GeoWebContent/styles.module.css
+++ b/src/container/GeoWebInterface/components/GeoWebContent/styles.module.css
@@ -15,10 +15,6 @@
   font-size: 1.3rem;
 }
 
-.tab:nth-child(-n + 3) {
-  border-right: 2px solid white;
-}
-
 .tab:hover {
   cursor: pointer;
   background: rgba(32, 35, 51, 0.8);
@@ -26,6 +22,8 @@
 
 .selected {
   background: rgba(47, 193, 193, 0.7);
+  border-left: 2px solid white;
+  border-right: 2px solid white;
 }
 
 .selected:hover {
